Added 90Han Text, still need to update values and plots with the final run.

--- a/Legacy.bib
+++ b/Legacy.bib
@@ -327,3 +327,15 @@ title = {{Rapid evolution of the human mutation spectrum}},
 volume = {6},
 year = {2017}
 }
+@article{Lan2017,
+author = {Lan, Tianming and Lin, Haoxiang and Zhu, Wenjuan and Laurent, Tellier Christian Asker Melchior and Yang, Mengcheng and Liu, Xin and Wang, Jun and Wang, Jian and Yang, Huanming and Xu, Xun and Guo, Xiaosen},
+title = {Deep whole-genome sequencing of 90 Han Chinese genomes},
+journal = {GigaScience},
+volume = {6},
+number = {9},
+pages = {gix067},
+year = {2017},
+doi = {10.1093/gigascience/gix067},
+URL = {http://dx.doi.org/10.1093/gigascience/gix067},
+eprint = {/oup/backfile/content_public/journal/gigascience/6/9/10.1093_gigascience_gix067/4/gix067.pdf}
+}
